--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,9 +21,9 @@
 		>
 	</div>
 
-	<!-- <div>
+	<div>
 		дизайн баннера: <a href="https://t.me/tehcojam">Никита Коджем</a>
-	</div> -->
+	</div>
 </footer>
 
 <style>
