fix: fix footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,14 +15,14 @@
 		</ul>
 	</div> -->
 
-	<div style="margin-top: 5px;">
+	<!-- <div style="margin-top: 5px;">
 		сайт сделан на <a href="https://astro.build">Astro</a>, исходники на <a
 			href="https://github.com/twoweeks/twg27-blog">GitHub</a
 		>
-	</div>
+	</div> -->
 
-	<div>
-		дизайн баннера: <a href="https://t.me/tehcojam">Никита Коджем</a>
+	<div style="margin-top: 5px;">
+		айдентика: <a href="https://t.me/tehcojam">Никита Коджем</a>
 	</div>
 </footer>
 
