feat: add iichan thread link

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -22,6 +22,7 @@ const prizeFund = 30_000;
 		<p style="margin-bottom: 0;">обсуждение конкурса:</p>
 		<ul style="margin-top: 0;">
 			<li><a href="https://2ch.hk/gd/">закреплённый тред в /gd/</a></li>
+			<li><a href="https://iichan.lol/vg/res/819510.html">тред на Ычане</a></li>
 			<li><a href="https://discord.gg/FNFnJVCZA9">сервер в Discord</a></li>
 			<li><a href="https://t.me/gdchat">чат в Telegram</a></li>
 		</ul>
