fix: some changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,22 +7,22 @@
 		>
 	</div>
 
-	<!-- <div class="footer__supporters">
+	{/* <div class="footer__supporters">
 		<span>информационная поддержка:</span>
 		<ul>
 			<li><a href="https://www.confa.gd" title="confa.gd"><img src="/img/logos/confagd.webp" alt="confa.gd"></a></li>
 			<li><a href="https://2ch.hk" title="Двач"><img src="/img/logos/dvach.svg" alt="Двач"></a></li>
 		</ul>
-	</div> -->
+	</div>
 
-	<!-- <div style="margin-top: 5px;">
+	<div style="margin-top: 5px;">
 		сайт сделан на <a href="https://astro.build">Astro</a>, исходники на <a
 			href="https://github.com/twoweeks/twg27-blog">GitHub</a
 		>
-	</div> -->
+	</div> */}
 
 	<div style="margin-top: 5px;">
-		айдентика: <a href="https://t.me/tehcojam">Никита Коджем</a>
+		айдентика: <a href="https://cojam.ru">Никита Коджем</a>
 	</div>
 </footer>
 
