--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Picture } from 'astro:assets';
+import { Image } from 'astro:assets';
 
 import { SITE_TITLE } from '../consts';
 import headerImage from '../shared/assets/header.webp';
@@ -11,7 +11,7 @@ import headerImage from '../shared/assets/header.webp';
 		class="header__image"
 		style={`--im-w: ${headerImage.width}px; --im-h: ${headerImage.height}px;`}
 	>
-		<a href="/" rel="home"><Picture src={headerImage} width={headerImage.width / 2} densities={[1, 2]} alt={SITE_TITLE} /></a>
+		<a href="/" rel="home"><Image src={headerImage} alt={SITE_TITLE} /></a>
 	</div>
 </header>
 
