--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -21,10 +21,9 @@ const prizeFund = 30_000;
 	<div>
 		<p style="margin-bottom: 0;">обсуждение конкурса:</p>
 		<ul style="margin-top: 0;">
-			<li><a href="https://2ch.hk/gd/">закреплённый тред в /gd/</a></li>
-			<li><a href="https://iichan.lol/vg/res/819510.html">тред на Ычане</a></li>
 			<li><a href="https://discord.gg/FNFnJVCZA9">сервер в Discord</a></li>
-			<li><a href="https://t.me/gdchat">чат в Telegram</a></li>
+			<li><a href="https://t.me/+PTOLW-fGfPUxMmM6">чат в Telegram</a></li>
+			<li>треды: <a href="https://2ch.hk/gd/res/994381.html">Двач</a>, <a href="https://iichan.lol/vg/res/819510.html">Ычан</a></li>
 		</ul>
 	</div>
 
