feat: supporters blog

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+import confagdLogo from '../shared/images/confagd.webp';
+---
+
 <footer class="footer">
 	<div>
 		организатор: <span class="tripcode">!MBoXQBAV7k</span> / <a
@@ -7,23 +11,22 @@
 		>
 	</div>
 
-	{/* <div class="footer__supporters">
+	<div style="margin-top: 5px;">
+		айдентика: <a href="https://cojam.ru">Никита Коджем</a>
+	</div>
+
+	<div class="footer__supporters">
 		<span>информационная поддержка:</span>
 		<ul>
-			<li><a href="https://www.confa.gd" title="confa.gd"><img src="/img/logos/confagd.webp" alt="confa.gd"></a></li>
-			<li><a href="https://2ch.hk" title="Двач"><img src="/img/logos/dvach.svg" alt="Двач"></a></li>
+			<li><a href="https://confa.gd" title="confa.gd"><img src={confagdLogo.src} width={confagdLogo.width} height={confagdLogo.height} alt="confa.gd"></a></li>
 		</ul>
 	</div>
 
-	<div style="margin-top: 5px;">
+	{/* <div style="margin-top: 5px;">
 		сайт сделан на <a href="https://astro.build">Astro</a>, исходники на <a
 			href="https://github.com/twoweeks/twg27-blog">GitHub</a
 		>
 	</div> */}
-
-	<div style="margin-top: 5px;">
-		айдентика: <a href="https://cojam.ru">Никита Коджем</a>
-	</div>
 </footer>
 
 <style>
