feat: refactor supporters

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,15 +18,26 @@ import confagdLogo from '../shared/images/confagd.webp';
 	<div class="footer__supporters">
 		<span>информационная поддержка:</span>
 		<ul>
-			<li><a href="https://confa.gd" title="confa.gd"><img src={confagdLogo.src} width={confagdLogo.width} height={confagdLogo.height} alt="confa.gd"></a></li>
+			<li>
+				<a href="https://confa.gd" title="confa.gd"
+					><img
+						src={confagdLogo.src}
+						width={confagdLogo.width}
+						height={confagdLogo.height}
+						alt="confa.gd"
+					/></a
+				>
+			</li>
 		</ul>
 	</div>
 
-	{/* <div style="margin-top: 5px;">
+	{
+		/* <div style="margin-top: 5px;">
 		сайт сделан на <a href="https://astro.build">Astro</a>, исходники на <a
 			href="https://github.com/twoweeks/twg27-blog">GitHub</a
 		>
-	</div> */}
+	</div> */
+	}
 </footer>
 
 <style>
