feat: new thread

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -21,11 +21,8 @@ const prizeFund = donations
 		<ul style="margin-top: 0;">
 			<li><a href="https://discord.gg/FNFnJVCZA9">сервер в Discord</a></li>
 			<li><a href="https://t.me/+PTOLW-fGfPUxMmM6">чат в Telegram</a></li>
-			<li>
-				треды: <a href="https://2ch.hk/gd/res/994381.html">Двач</a>, <a
-					href="https://iichan.lol/vg/res/819510.html">Ычан</a
-				>
-			</li>
+			{/* prettier-ignore */}
+			<li>треды: <a href="https://2ch.hk/gd/res/996827.html">Двач</a>, <a href="https://iichan.lol/vg/res/819510.html">Ычан</a></li>
 		</ul>
 	</div>
 
