feat: demo form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,17 @@ const posts = (await getCollection('blog')).sort(
 
 			<div>
 				<TimerToDate
-					date="2025-02-01T00:00:00+03:00"
+					date="2025-02-01T12:00:00+03:00"
 					text="Срок отправки демоверсий"
 					endText="Время для отправки демоверсий вышло"
 				/>
 			</div>
+
+			<p style="margin-top: 10px; font-size: 1.5em;">
+				<a href="https://forms.gle/bg2rmmVr4Fs4JUSA9" target="_blank"
+					>&gt;&gt; Форма отправки игры &lt;&lt;</a
+				>
+			</p>
 
 			<p>
 				Основная цель конкурса заключается в том, чтобы за две недели сделать игру на заданную тему.
