chore: hide places

--- a/src/components/ResultPlaces.astro
+++ b/src/components/ResultPlaces.astro
@@ -1,45 +1,41 @@
 ---
 import { Picture } from 'astro:assets';
-
-import blindsightImg from '../shared/images/results-post/blindsight.jpg';
-import anarchistImg from '../shared/images/results-post/anarchist.jpg';
-import villaImg from '../shared/images/results-post/villa.jpg';
 ---
 
 <div style="margin-top: 1em; text-align:center;">
 	<div class="place">
-		<Picture src={blindsightImg} alt="BlindSight screenshot" />
+		<!-- <Picture src={} alt="screenshot" /> -->
 
 		<div class="place__text">
 			<span>1 место</span>
 
-			<span style="font-size: 5em;">BlindSight</span>
+			<span style="font-size: 5em;"></span>
 
-			<span>15 010 рублей</span>
+			<span>0 рублей</span>
 		</div>
 	</div>
 
 	<div class="place">
-		<Picture src={anarchistImg} alt="Мёртвый Анархист screenshot" />
+		<!-- <Picture src={anarchistImg} alt="screenshot" /> -->
 
 		<div class="place__text">
 			<span>2 место</span>
 
-			<span style="font-size: 4.75em;">Мёртвый Анархист</span>
+			<span style="font-size: 4.75em;"></span>
 
-			<span>9 010 рублей</span>
+			<span>0 рублей</span>
 		</div>
 	</div>
 
 	<div class="place">
-		<Picture src={villaImg} alt="Старая Вилла screenshot" />
+		<!-- <Picture src={} alt="screenshot" /> -->
 
 		<div class="place__text">
 			<span>3 место</span>
 
-			<span style="font-size: 4.5em;">Старая Вилла</span>
+			<span style="font-size: 4.5em;"></span>
 
-			<span>6 010 рублей</span>
+			<span>0 рублей</span>
 		</div>
 	</div>
 </div>
