feat: assets location change

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
-import faviconImage from '../shared/assets/favicon.webp';
-import shareImage from '../shared/assets/header.webp';
+import faviconImage from '../assets/shared/favicon.webp';
+import shareImage from '../assets/shared/header.webp';
 
 interface Props {
 	title: string;
