--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import confagdLogo from '../shared/images/confagd.webp';
+import confagdLogo from '../assets/shared/confagd.webp';
 ---
 
 <footer class="footer">
