--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 
 import { SITE_TITLE } from '../consts';
-import headerImage from '../shared/assets/header.webp';
+import headerImage from '../assets/shared/header.webp';
 ---
 
 <header class="header">
