--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,9 @@ const posts = (await getCollection('blog')).sort(
 
 			<div>
 				<TimerToDate
-					date="2025-02-01T12:00:00+03:00"
-					text="Срок отправки демоверсий"
-					endText="Время для отправки демоверсий вышло"
+					date="2025-02-08T00:00:00+03:00"
+					text="Срок отправки финальных версий"
+					endText="Время для отправки игр вышло"
 				/>
 			</div>
 
