feat: update thread link

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -22,7 +22,7 @@ const prizeFund = donations
 			<li><a href="https://discord.gg/FNFnJVCZA9">сервер в Discord</a></li>
 			<li><a href="https://t.me/+PTOLW-fGfPUxMmM6">чат в Telegram</a></li>
 			{/* prettier-ignore */}
-			<li>треды: <a href="https://2ch.hk/gd/res/998733.html">Двач</a>, <a href="https://iichan.lol/vg/res/819510.html">Ычан</a></li>
+			<li>треды: <a href="https://2ch.hk/gd/res/1000736.html">Двач</a>, <a href="https://iichan.lol/vg/res/819510.html">Ычан</a></li>
 		</ul>
 	</div>
 
