--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,14 +17,14 @@ const posts = (await getCollection('blog')).sort(
 
 			<div>
 				<TimerToDate
-					date="2025-02-08T00:00:00+03:00"
+					date="2025-02-11T00:00:00+03:00"
 					text="Срок отправки финальных версий"
 					endText="Время для отправки игр вышло"
 				/>
 			</div>
 
 			<p style="margin-top: 10px; font-size: 1.5em;">
-				<a href="https://forms.gle/bg2rmmVr4Fs4JUSA9" target="_blank"
+				<a href="https://forms.gle/FucHBBWoi5zMnYBd6" target="_blank"
 					>&gt;&gt; Форма отправки игры &lt;&lt;</a
 				>
 			</p>
