--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const posts = (await getCollection('blog')).sort(
 		<div>
 			<p style="font-size: 1.2em;">Добро пожаловать на конкурс Two Weeks Game!</p>
 
-			<div>
+			<!-- <div>
 				<TimerToDate
 					date="2025-02-11T00:00:00+03:00"
 					text="Срок отправки финальных версий"
@@ -26,6 +26,11 @@ const posts = (await getCollection('blog')).sort(
 			<p style="margin-top: 10px; font-size: 1.5em;">
 				<a href="https://forms.gle/FucHBBWoi5zMnYBd6" target="_blank"
 					>&gt;&gt; Форма отправки игры &lt;&lt;</a
+				>
+			</p> -->
+
+			<p style="margin-top: 10px; font-size: 1.5em;">
+				<a href="/blog/9-final/">&gt;&gt; Финальные версии игр &lt;&lt;</a
 				>
 			</p>
 
