--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,19 +15,13 @@ const posts = (await getCollection('blog')).sort(
 		<div>
 			<p style="font-size: 1.2em;">Добро пожаловать на конкурс Two Weeks Game!</p>
 
-			<!-- <div>
+			<div>
 				<TimerToDate
-					date="2025-02-11T00:00:00+03:00"
-					text="Срок отправки финальных версий"
-					endText="Время для отправки игр вышло"
+					date="2025-02-17T00:00:00+03:00"
+					text="Окончание голосования"
+					endText="Голосование завершено. Ждите итогов"
 				/>
 			</div>
-
-			<p style="margin-top: 10px; font-size: 1.5em;">
-				<a href="https://forms.gle/FucHBBWoi5zMnYBd6" target="_blank"
-					>&gt;&gt; Форма отправки игры &lt;&lt;</a
-				>
-			</p> -->
 
 			<p style="margin-top: 10px; font-size: 1.5em;">
 				<a href="/blog/9-final/">&gt;&gt; Финальные версии игр &lt;&lt;</a
