--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,16 +15,8 @@ const posts = (await getCollection('blog')).sort(
 		<div>
 			<p style="font-size: 1.2em;">Добро пожаловать на конкурс Two Weeks Game!</p>
 
-			<div>
-				<TimerToDate
-					date="2025-02-17T00:00:00+03:00"
-					text="Окончание голосования"
-					endText="Голосование завершено. Ждите итогов"
-				/>
-			</div>
-
 			<p style="margin-top: 10px; font-size: 1.5em;">
-				<a href="/blog/9-final/">&gt;&gt; Финальные версии игр &lt;&lt;</a
+				<a href="/blog/10-results/">&gt;&gt; Итоги конкурса &lt;&lt;</a
 				>
 			</p>
 
@@ -42,14 +34,14 @@ const posts = (await getCollection('blog')).sort(
 			</p>
 		</div>
 
-		<!-- <nav class="heading__nav">
+		<nav class="heading__nav">
 			<ul>
-				<li><a href="/posts/11-results/">результаты</a></li>
-				<li><a href="/posts/07-final/">финальные версии</a></li>
-				<li><a href="/posts/05-demo/">демоверсии</a></li>
-				<li><a href="/posts/04-start/">тема конкурса</a></li>
+				<li><a href="/blog/10-results/">результаты</a></li>
+				<li><a href="/blog/9-final/">финальные версии</a></li>
+				<li><a href="/blog/5-demo/">демоверсии</a></li>
+				<li><a href="/blog/3-start/">тема конкурса</a></li>
 			</ul>
-		</nav> -->
+		</nav>
 	</section>
 
 	<section class="blog">
