--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,3 @@
----
-import confagdLogo from '../assets/shared/confagd.webp';
----
-
 <footer class="footer">
 	<div>
 		организатор: <span class="tripcode">!MBoXQBAV7k</span> / <a
@@ -15,29 +11,11 @@ import confagdLogo from '../assets/shared/confagd.webp';
 		айдентика: <a href="https://cojam.ru">Никита Коджем</a>
 	</div>
 
-	<div class="footer__supporters">
-		<span>информационная поддержка:</span>
-		<ul>
-			<li>
-				<a href="https://confa.gd" title="confa.gd"
-					><img
-						src={confagdLogo.src}
-						width={confagdLogo.width}
-						height={confagdLogo.height}
-						alt="confa.gd"
-					/></a
-				>
-			</li>
-		</ul>
-	</div>
-
-	{
-		/* <div style="margin-top: 5px;">
+	<div>
 		сайт сделан на <a href="https://astro.build">Astro</a>, исходники на <a
 			href="https://github.com/twoweeks/twg27-blog">GitHub</a
 		>
-	</div> */
-	}
+	</div>
 </footer>
 
 <style>
